# MVANet

./: .gitignore  CHANGELOG.md  Makefile  README.md  predict.py  pyproject.toml  test.py  train.py
.github/workflows/: ci.yaml
model/: MVANet.py  SwinTransformer.py
mvanet/: predictor.py
mvanet/model/: __init__.py
tests/: predictor_test.py
utils/: config.py  dataset_strategy_fpn.py  misc.py  saliency_metric.py  test_data.py
