[tool.poetry]
name = "mvanet"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mmengine = "^0.10.4"
mmcv-full = "^1.7.2"
mmdet = "^3.3.0"
mmsegmentation = "^1.2.2"
torch = "^2.3.1"
torchvision = "^0.18.1"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[tool.ruff.lint]
ignore = [
    "E741", # ambiguous variable name
]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
no_site_packages = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
